<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene2"
    android:background="@color/back"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/profilePic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="64dp"
        android:background="@drawable/image_circle"
        android:layout_marginTop="8dp"
        android:src="@drawable/graf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:roundPercent="1.0"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/icMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:src="@drawable/ic_more_vert"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription,MissingConstraints" />

    <ImageView
        android:id="@+id/icBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/name"
        style="@style/normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/name"
        android:textSize="@dimen/medium_text_Size"
        android:layout_marginBottom="@dimen/small_margin"
        android:paddingTop="4dp"
        android:textColor="@color/White"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/onLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/online"
        android:textColor="@color/White"
        android:paddingTop="@dimen/large_padding"
        android:paddingEnd="@dimen/small_padding"
        android:layout_marginEnd="@dimen/huge_dimen"
        android:textSize="@dimen/small_text_Size"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintTop_toTopOf="@id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        tools:ignore="HardcodedText,MissingConstraints,RtlSymmetry,SpUsage"
        tools:layout_editor_absoluteY="31dp" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:background="@color/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topBar"
        tools:ignore="MissingConstraints,UnknownId">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                style="@style/Telegram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account"
                tools:ignore="HardcodedText" />

            <TextView
                style="@style/normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0123456789"
                tools:ignore="HardcodedText" />

            <TextView
                style="@style/hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tap_to_change_phone_number" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                style="@style/normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/userName"/>

            <TextView
                style="@style/hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                style="@style/normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bio" />

            <TextView
                style="@style/hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_a_few_words_about_yourself" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="8dp"
                android:background="@color/black" />

            <TextView
                style="@style/Telegram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/small_padding"
                android:paddingBottom="@dimen/small_padding"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:src="@drawable/chat"/>

                <TextView
                    style="@style/normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_setting" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/small_padding"
                android:paddingBottom="@dimen/small_padding">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:src="@drawable/data"/>

                <TextView
                    style="@style/normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/privacy_and_security" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/black"
                android:paddingTop="@dimen/medium_padding" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/small_padding"
                android:paddingBottom="@dimen/small_padding"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:src="@drawable/notificaton"/>

                <TextView
                    style="@style/normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications_and_sounds" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/small_padding"
                android:paddingBottom="@dimen/small_padding">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:src="@drawable/data"/>


                <TextView
                    style="@style/normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Data and Storage" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/small_padding"
                android:paddingBottom="@dimen/small_padding"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large_margin"
                    android:src="@drawable/power"
                    android:contentDescription="TODO"
                    tools:ignore="ContentDescription" />

                <TextView
                    style="@style/normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/small_padding"
                    android:paddingBottom="@dimen/small_padding"
                    android:text="@string/power_saving" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/black" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/small_padding"
                android:paddingBottom="@dimen/small_padding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:src="@drawable/chatfolder"/>

                <TextView
                    style="@style/normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_folders" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/small_padding"
                android:paddingBottom="@dimen/small_padding">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:src="@drawable/devices"/>

                <TextView
                    style="@style/normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="Devices"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/small_padding"
                android:paddingBottom="@dimen/small_padding">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:src="@drawable/language"/>

                <TextView
                    style="@style/normal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/language"
                    tools:ignore="HardcodedText" />


                <TextView
                    style="@style/normal"
                    android:layout_marginEnd="@dimen/large_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/english" />


            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="8dp"
                android:background="@color/black" />

            <TextView
                style="@style/Telegram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/small_padding"
                android:paddingBottom="@dimen/small_padding"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:src="@drawable/chatsetting"
                    android:contentDescription="TODO"
                    tools:ignore="ContentDescription" />

                <TextView
                    style="@style/normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ask a Question" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/small_padding"
                android:paddingBottom="@dimen/small_padding">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:src="@drawable/fsq"/>

                <TextView
                    style="@style/normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/telegram_faq" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="8dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/small_padding"
                android:paddingBottom="@dimen/small_padding"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:src="@drawable/privacyp"
                    android:contentDescription="TODO"
                    tools:ignore="ContentDescription" />

                <TextView
                    style="@style/normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy" />

            </LinearLayout>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.motion.widget.MotionLayout>


